# ocr-rev

./: AGENTS.md  README.md  benchmark_inference.py  main.py  pyproject.toml  run_inference.py  run_training.py
microocr/: __init__.py  ctc.py  decode.py  export.py  inference.py  model.py  preprocess.py  segment.py
microocr/weights/: microocr.npz
output/: microocr.npz  microocr_best.pth  microocr_epoch10.pth  microocr_epoch100.pth  microocr_epoch20.pth  microocr_epoch30.pth  microocr_epoch40.pth  microocr_epoch50.pth  microocr_epoch60.pth  microocr_epoch70.pth  microocr_epoch80.pth  microocr_epoch90.pth  microocr_final.npz  microocr_final.pth
tests/: test_pipeline.py  test_training_eval_schedule.py
training/: augment.py  eval.py  synth_data.py  train.py
